@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.17
 
+	- The filters did not quote the page label string when
+	  embedding it in PostScript output.
 	- The serial backend now enumerates serial ports under
 	  MacOS X.
 	- The pdftops filter contained font rasterizer code that
